rnsc/test_data/rns_integration/error/parser/method_directive/trailing_tokens.rns
.class MethodTrailingTokens
.super java/lang/Object

.method main ()V extra_token
.method_end
.class_end
